# AutoPET2-Submission

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  copy_files.sh  export.sh  guidance.md  pyproject.toml  requirements.txt  requirements_docker.txt  setup.cfg  test.sh  test_autopet.sh  test_autopet_ensemble.sh
ipynb/: usage_analysis.ipynb
monailabel/configs/: sw_fastedit.py  sw_interactive_segmentation.py
monailabel/infers/: sw_fastedit.py  sw_interactive_segmentation.py
monailabel/model/: pretrained_sw_interactive_segmentation.pt.REMOVED.git-id
scripts/: count_clicks.py  dynunet_shape.py  gpu_usage_analysis.py  split_data.py
src/: api2.py  compute_metrics.py  data2.py  ensemble.py  ensemble_eval.py  eval.py  test.py  test_ensemble.py  train.py
src/sw_fastedit/: __init__.py  api.py  click_definitions.py  data.py  helper_transforms.py  interaction.py  transforms.py
src/sw_fastedit/scripts/: dynunet_test.py  gpu_usage_analysis.py  split_data.py
src/sw_fastedit/test_scripts/: dataloader_bug.py  test_dataloaders.py  test_edt.py
src/sw_fastedit/utils/: argparser.py  distance_transform.py  helper.py
src/sw_interactive_segmentation/: .gitignore  __init__.py  api.py  argparser.py  data.py  interaction.py  tensorboard_logger.py  train.py  transforms.py
src/sw_interactive_segmentation/scripts/: gpu_usage_analysis.py  split_data.py
src/sw_interactive_segmentation/test_scripts/: OOM_debug.py  dataloader_bug.py  dice_test.py  py3smi.py  sw_test.py
src/sw_interactive_segmentation/utils/: argparser.py  (+8 more)
sw_interactive_segmentation/: parser.py  train.py
sw_interactive_segmentation/test_scripts/: py3smi.py
user_guidance_study/: .gitignore  api.py  calling.md  parser.py  setup.cfg  sw_test.py  tensorboard_logger.py  test_edt.py  train.py  usage_analysis.ipynb
user_guidance_study/data/: 15_usage.csv  17_usage.csv  18_checkpoint.pt.REMOVED.git-id  18_log.txt.REMOVED.git-id  18_usage.csv  19_usage.csv  22_usage.csv  25_usage.csv  26_usage.csv  27_usage.csv  2_log.txt  2_usage.csv  33_log.txt  33_usage.csv  34_usage.csv  35_usage.csv  36_log.txt  36_usage.csv  37_log.txt  37_usage.csv  3_usage.csv  usage_GPU_transforms_e5_little_cpu_transfer.csv  usage_all_on_gpu_e_3.csv  usage_before_gpu_changes.csv  usage_cpu.csv  usage_cpu_e3_t25_main.csv  usage_cpu_torch_empty_cuda_e3_t25.csv  usage_e3_t25_gpu_transforms.csv  usage_gpu_e1_t20_main.csv  usage_gpu_full_epoch.csv  usage_mostly_gpu_e3_2.csv
user_guidance_study/ipynb/: PlotSchedulers.ipynb  duplicate_usage_analysis.ipynb  usage_analysis.ipynb
user_guidance_study/test_scripts/: OOM_debug.py  dice_test.py  py3smi.py  sw_test.py  test_dataloaders.py  test_edt.py
user_guidance_study/utils/: distance_transform.py  dynunet.py  helper.py  interaction.py  logger.py  transforms.py  transforms_old.py  utils.py
weights/5er/: 0.pt  1.pt  2.pt  3.pt  4.pt
