# Copyright (c) MONAI Consortium
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "sw_fastedit"
version = "0.9.0"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[build-system]
requires = [
  "wheel",
  "setuptools",
  "torch>=1.7",
  "ninja",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(threadName)s] [%(levelname)s] (%(name)s:%(lineno)d) %(message)s"

#log_file = "pytest.log"
#log_file_level = "INFO"
#log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
#log_file_date_format = "%Y-%m-%d %H:%M:%S"

