[metadata]
name = sw_fastedit
author = Matthias Hadlich, Zdravko Marinov, MONAI

[options]
package_dir=
    =src
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src

[flake8]
select = B,C,E,F,N,P,T4,W,B9
max_line_length = 140
ignore =
    E203
    E501
    E741
    W503
    W504
    C408
    N812
    B023
    B905
    B028
    B907
    E712
    N801
per_file_ignores = 
    __init__.py: F401
    __main__.py: F401
    data.py: N806, N802,
exclude = *.pyi,.git,.eggs,monai/_version.py,versioneer.py,venv,.venv,_version.py

[isort]
# known_first_party = monai
profile = black
line_length = 140
skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, monai/__init__.py
skip_glob = *.pyi
add_imports = from __future__ import annotations
append_only = true
